# KFC-PW4-TB33-Kyndaliuk

./: README.md  SetupWindow.py  attractor.py  error_chart.py  lorenz.py  main.py  pyproject.toml
chaos_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_attractor.py  test_sanity.py
