[project]
name = "chaos_model"
version = "0.1.0"
description = "Модель хаосу"
authors = [
    { name="Костя Киндалюк", email="your@email.com" }
]
dependencies = ["numpy",
"scipy",
"matplotlib",
"ttkbootstrap"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]